# john_lib

./: .gitignore  README.md  pyproject.toml
john_widgets/: flow_layout.py  generate_trie.py
